swapping URL to URI